# alibabacloud-AliIMPInteractiveLive-Demo

Android/: .gitignore  README.md  build.gradle  gradle.properties  install.sh  local.properties  settings.gradle
Android/Demo/chatroom-demo/: install.sh
Android/Demo/classroom-demo/: install.sh
Android/Demo/liveroom-demo/: build.gradle  (+3 more)
Android/app/: build.gradle
Android/chatroom-demo/: build.gradle  settings.gradle
Android/classroom-demo/: README.md  build.gradle  gradle.properties  settings.gradle
Android/liveroom-demo/: README.md  build.gradle  install.sh  settings.gradle
Android/scene-demo/: gradle.properties  install.sh  settings.gradle
Flutter/classroom/: .gitignore  README.md  pubspec.yaml
Flutter/liveroom/: .gitignore  README.md  pubspec.yaml
Flutter/sdk/: .gitignore  README.md  pubspec.yaml
Server/: pom.xml
Web/: README.md
Web/business-demo-web/: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  vue.config.js
Web/class-demo-web/: .umirc.ts  README.md  package.json
Web/interaction-live-web/: .umirc.ts  package.json
Web/live-demo-web/: .gitignore
Web/room-paas-web-simple-demo/: .gitignore  README.md
Web/ui-commerce-web/: README.md  package.json
Web/ui-enterprise-web/: .umirc.ts  README.md  package.json
Web/uniapp-nvue-demo/: .gitignore  App.vue  README.md  manifest.json  pages.json
Windows/: .gitignore  CMakeLists.txt  Readme.md  build_win.bat
Windows/classroom/: .clang-format  CMakeLists.txt  bottom_widget.cpp  bottom_widget.h  bottom_widget_student_vm.cpp  bottom_widget_student_vm.h  bottom_widget_teacher_vm.cpp  bottom_widget_teacher_vm.h  bottom_widget_vm.cpp  bottom_widget_vm.h  chat_bubble.cpp  chat_bubble.h  chat_listener.cpp  chat_listener.h  chat_vm.cpp  chat_vm.h  chat_widget.cpp  chat_widget.h  class_main_window.cpp  class_main_window.h  class_main_window_vm.cpp  class_main_window_vm.h  classroom.cpp  classroom.h  classroom_application.h  classroom_def.cpp  classroom_def.h  conf_performance_dialog.cpp  conf_performance_dialog.h  conf_share_dialog.cpp  conf_share_dialog.h  confirm_dialog.cpp  confirm_dialog.h  device_list.cpp  device_list.h  device_list_vm.cpp  device_list_vm.h  display_controls.cpp  display_controls.h  emoji_table.cpp  (+84 more)
Windows/classroom/api/: base_api.cpp  base_api.h
Windows/classroom/biz/: rtc_user_data_mgr.cpp  rtc_user_data_mgr.h
Windows/classroom/common/: common_helper.cpp  common_helper.h  http_helper.cpp  http_helper.h  icon_font_helper.cpp  icon_font_helper.h  iconfont_define.h  logging.cpp  logging.h
Windows/classroom/const/: const.cpp  const.h
Windows/classroom/event/: event_manager.cpp  event_manager.h  event_param.h
Windows/classroom/forms/: bottom_widget.ui  chat_widget.ui  class_main_window.ui  conf_performance_dialog.ui  conf_share_dialog.ui  confirm_dialog.ui  demo.qrc  display_controls.ui  grid_display_item_widget.ui  grid_display_widget.ui  laser_selector_menu.ui  login_window.ui  main_display_container.ui  main_display_preview.ui  main_window.ui  pen_selector_menu.ui  ppt_upload_progress.ui  recording_tips.ui  share_screen_hover_bar.ui  share_screen_item_widget.ui  share_screen_select_dlg.ui  size_slide_bar.ui  small_preview_controls.ui  speaker_display_widget.ui  student_controls.ui  switch_zoom.ui  text_selector_menu.ui  thumbnail_container.ui  thumbnail_widget.ui  thumbnail_widget_item.ui  title_widget.ui  toast_widget.ui  upload_selector_menu.ui  user_item_widget.ui  user_list_widget.ui  wb_tips.ui
Windows/classroom/forms/qss/: LoginSkin.qss
Windows/classroom/ui/: UiDataDefine.h
Windows/classroom/ui/Button/: TextToolButton.cpp  TextToolButton.h  TextToolButton.ui  multi_icon_button.cpp  multi_icon_button.h  multi_icon_button.ui
Windows/classroom/ui/Label/: MultiIconLabel.cpp  MultiIconLabel.h
Windows/classroom/util/: log_util.cpp  log_util.h  sign_util.cpp  sign_util.h
Windows/classroom/view/: view_component_manager.cpp  view_component_manager.h  view_defines.h
Windows/classroom/view/interface/: base_interface.h  i_login_window.h  i_main_window.h  i_toast_widget.h
Windows/cmake/: ALL_BUILD.vcxproj.user.in
Windows/locale/: zh-CN.ini
iOS/: .gitattributes  .gitignore  Podfile
iOS/AliInteractiveRoomDemo/: AIRBDAnchorViewController.m  AIRBDAudienceView.m  AIRBDAudienceViewController.m  AIRBDBeautySetsView.m  AIRBDBigClassViewController.m  AIRBDEnvironments.h  AIRBDEnvironments.m  AIRBDLiveViewController.m  AIRBDLoginViewController.m  AIRBDRoomListCell.m  AIRBDRoomListViewController.h  AIRBDRoomListViewController.m  AIRBDSetRoomViewController.m  AIRBDStudentView.h  AIRBDStudentView.m  AIRBDTeacherView.m  AIRBDToast.m  AIRBDetailsButton.m  AppDelegate.h  AppDelegate.m  Info.plist  SceneDelegate.h  main.m
iOS/AliInteractiveRoomDemo.xcodeproj/: project.pbxproj
iOS/Demo/: .gitignore  Podfile
iOS/NormalClassroomForStudents/: AIRBDBigClassViewController.m  AIRBDStudentView.m  main.m
iOS/NormalClassroomForTeacher/: AIRBDBigClassViewController.h  AIRBDBigClassViewController.m  AIRBDLoginViewController.m  AIRBDStudentListItemModel.m  AIRBDTeacherView.m  SceneDelegate.m  ViewController.h  ViewController.m
iOS/NormalLiveRoomForAnchor/: AIRBDAnchorViewController.m  AIRBDEnvironments.h  AIRBDLoginViewController.h  AIRBDLoginViewController.m  AppDelegate.m  SceneDelegate.m
iOS/NormalLiveRoomForAudience/: AIRBDAudienceViewController.m  AIRBDLoginViewController.m  AIRBDRoomInfoModel.h  AppDelegate.h  SceneDelegate.m  main.m
iOS/SDK/: AliInteractiveRoomBundle.podspec
iOS/StandardClassroomForStudents/: AIRBDClassroomStudent4iPadViewController.h  AIRBDClassroomStudent4iPhoneViewController.h  AIRBDClassroomStudent4iPhoneViewController.m  AIRBDEnvironments.h  AppDelegate.h  SceneDelegate.m
iOS/StandardClassroomForTeacher/: AppDelegate.m  SceneDelegate.m  ViewController.h
iOS/StandardLiveRoomForAnchor/: AIRBDLiveRoomViewController.m  AppDelegate.m  Info.plist  SceneDelegate.m  ViewController.h
iOS/StandardLiveRoomForAudience/: AIRBDLiveRoomViewController.m  AIRBDShopWindowViewController.m  AppDelegate.m  SceneDelegate.m  ViewController.m
(+2001 files in other folders)
